# MotionPNGTuber

./: .gitignore  CLAUDE.md  README.md  auto_erase_mouth.py  auto_mouth_track_v2.py  calibrate_mouth_track.py  erase_mouth_offline.py  face_track_anime_detector.py  loop_lipsync_runtime_patched_emotion_auto.py  mouth_erase_tuner_gui.py  mouth_track_gui.py  preview_mouth_track.py  pyproject.toml  requirements.txt
docs/: USAGE.md
web_pipeline/: __init__.py  config.py  mouth_detector.py  mouth_eraser.py  pipeline.py  sprite_extractor.py  test_full_pipeline.py  test_pipeline.py  test_sprite.py  test_wan.py  video_generator.py
web_player/: index.html
