[project]
name = "motionpngtuber"
version = "0.2.0"
description = "Web版MotionPNGTuber - 大模型驱动的口型同步系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 核心依赖
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",

    # API 调用
    "openai>=1.0.0",
    "requests>=2.28.0",

    # 音频处理（实时口型）
    "sounddevice>=0.4.6",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
# 桌面 GUI 版本
gui = [
    "PyQt5>=5.15.0",
]

[tool.uv]
override-dependencies = [
    # headless版を無効化してGUI版のopencv-pythonを使用
    "opencv-python-headless>=4.5.4.58 ; sys_platform == 'never'",
]
